--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/sandipmavani/netlify-express-json-server#readme",
   "dependencies": {
-    "json-server": "^0.14.2",
-    "path": "^0.12.7"
+    "json-server": "0.14.2",
+    "path": "0.12.7"
   },
   "devDependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "netlify-lambda": "^0.4.0",
-    "serverless-http": "^1.10.1"
+    "body-parser": "1.18.3",
+    "express": "4.16.4",
+    "netlify-lambda": "0.4.0",
+    "serverless-http": "1.10.1"
   }
 }
