--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/sandipmavani/netlify-express-json-server#readme",
   "dependencies": {
-    "json-server": "0.14.2",
+    "json-server": "^0.16.1",
     "path": "0.12.7"
   },
   "devDependencies": {
-    "body-parser": "1.18.3",
-    "express": "4.16.4",
-    "netlify-lambda": "0.4.0",
-    "serverless-http": "1.10.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "netlify-lambda": "^1.6.3",
+    "serverless-http": "^2.3.2"
   }
 }
