--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "functions/server.js",
   "scripts": {
     "build": "netlify-lambda build json-server",
+    "serve": "netlify-lambda serve --config ./webpack.functions.js json-server",
     "start": "node server-local.js"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
-    "serverless-http": "^2.3.2"
+    "serverless-http": "^2.3.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
